--- a/navidrome/docker-compose.yml
+++ b/navidrome/docker-compose.yml
@@ -2,20 +2,22 @@ version: "3"
 
 services:
   navidrome:
-    image: deluan/navidrome:latest
+    image: deluan/navidrome:0.51.0
+    container_name: navidrome
     restart: always
+    user: 1000:1000
     ports:
       - "4533:4533"
     environment:
-      - ND_ENABLETRANSCODINGCONFIG=true
-      - ND_TRANSCODINGCACHESIZE=0
       - ND_SCANSCHEDULE=1h
       - ND_LOGLEVEL=info
       - ND_SESSIONTIMEOUT=24h
-      - ND_BASEURL=""
-      - ND_LASTFM_APIKEY=${ND_LASTFM_APIKEY}
-      - ND_LASTFM_SECRET=${ND_LASTFM_SECRET}
+      - ND_ENABLETRANSCODINGCONFIG=true
+      - ND_TRANSCODINGCACHESIZE=5000M
+      - ND_IMAGECACHESIZE=2000M
+      - ND_REVERSEPROXYWHITELIST=${ND_REVERSEPROXYWHITELIST}
+      - ND_BASEURL=${ND_BASEURL}
     volumes:
-      - "${PATH_TO_NAVIDROME}/data:/data"
-      - "${PATH_TO_NAVIDROME}:/music:ro"
+      - "${PATH_TO_NAVIDROME_CONFIG}/data:/data"
+      - "${PATH_TO_MUSIC}:/music:ro"
 
