--- a/chatwoot/docker-compose.yaml
+++ b/chatwoot/docker-compose.yaml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   base: &base
-    image: chatwoot/chatwoot:latest
+    image: chatwoot/chatwoot:${CHATWOOT_VERSION}
     env_file: .env ## Change this file for customized env variables
     volumes:
       - ${CHATWOOT_DATA}/app/storage:/app/storage
@@ -36,7 +36,7 @@ services:
     image: postgres:12
     restart: always
     ports:
-      - '127.0.0.1:5432:5432'
+      - '0.0.0.0:5432:5432'
     volumes:
       - ${CHATWOOT_DATA}/data/postgres:/var/lib/postgresql/data
     environment:
