feat: update navidrome config

--- a/navidrome/docker-compose.yml
+++ b/navidrome/docker-compose.yml
@@ -17,6 +17,14 @@ services:
       - ND_IMAGECACHESIZE=2000M
       - ND_REVERSEPROXYWHITELIST=${ND_REVERSEPROXYWHITELIST}
       - ND_BASEURL=${ND_BASEURL}
+      - ND_ENABLESHARING=${ND_ENABLESHARING}
+      - ND_ENABLEGRAVATAR=${ND_ENABLEGRAVATAR}
+      - ND_SPOTIFY_ID=${ND_SPOTIFY_ID}
+      - ND_SPOTIFY_SECRET=${ND_SPOTIFY_SECRET}
+      - ND_LASTFM_ENABLED=${ND_LASTFM_ENABLED}
+      - ND_LASTFM_APIKEY=${ND_LASTFM_APIKEY}
+      - ND_LASTFM_SECRET=${ND_LASTFM_SECRET}
+      - ND_LASTFM_LANGUAGE=${ND_LASTFM_LANGUAGE}
     volumes:
       - "${PATH_TO_NAVIDROME_CONFIG}/data:/data"
       - "${PATH_TO_MUSIC}:/music:ro"
