--- a/bitwarden_traefik/docker-compose.yml
+++ b/bitwarden_traefik/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3'
-
 services:
   bitwarden:
     image: vaultwarden/server:latest
@@ -29,5 +27,5 @@ services:
 
 networks:
   default:
-    external:
-      name: traefik
+    external: true
+    name: traefik
