feat: update appwrite

--- a/appwrite/docker-compose.yml
+++ b/appwrite/docker-compose.yml
@@ -34,7 +34,7 @@ services:
       - appwrite
 
   appwrite:
-    image: appwrite/appwrite:1.0.3
+    image: appwrite/appwrite:1.2.1
     container_name: appwrite
     <<: *x-logging
     restart: unless-stopped
@@ -143,11 +143,15 @@ services:
       - _APP_MAINTENANCE_RETENTION_CACHE
       - _APP_MAINTENANCE_RETENTION_ABUSE
       - _APP_MAINTENANCE_RETENTION_AUDIT
+      - _APP_MAINTENANCE_RETENTION_USAGE_HOURLY
       - _APP_SMS_PROVIDER
       - _APP_SMS_FROM
+      - _APP_GRAPHQL_MAX_BATCH_SIZE
+      - _APP_GRAPHQL_MAX_COMPLEXITY
+      - _APP_GRAPHQL_MAX_DEPTH
 
   appwrite-realtime:
-    image: appwrite/appwrite:1.0.3
+    image: appwrite/appwrite:1.2.1
     entrypoint: realtime
     container_name: appwrite-realtime
     <<: *x-logging
@@ -189,7 +193,7 @@ services:
       - _APP_LOGGING_CONFIG
 
   appwrite-worker-audits:
-    image: appwrite/appwrite:1.0.3
+    image: appwrite/appwrite:1.2.1
     entrypoint: worker-audits
     <<: *x-logging
     container_name: appwrite-worker-audits
@@ -215,7 +219,7 @@ services:
       - _APP_LOGGING_CONFIG
 
   appwrite-worker-webhooks:
-    image: appwrite/appwrite:1.0.3
+    image: appwrite/appwrite:1.2.1
     entrypoint: worker-webhooks
     <<: *x-logging
     container_name: appwrite-worker-webhooks
@@ -237,7 +241,7 @@ services:
       - _APP_LOGGING_CONFIG
 
   appwrite-worker-deletes:
-    image: appwrite/appwrite:1.0.3
+    image: appwrite/appwrite:1.2.1
     entrypoint: worker-deletes
     <<: *x-logging
     container_name: appwrite-worker-deletes
@@ -292,7 +296,7 @@ services:
       - _APP_EXECUTOR_HOST
 
   appwrite-worker-databases:
-    image: appwrite/appwrite:1.0.3
+    image: appwrite/appwrite:1.2.1
     entrypoint: worker-databases
     <<: *x-logging
     container_name: appwrite-worker-databases
@@ -318,7 +322,7 @@ services:
       - _APP_LOGGING_CONFIG
 
   appwrite-worker-builds:
-    image: appwrite/appwrite:1.0.3
+    image: appwrite/appwrite:1.2.1
     entrypoint: worker-builds
     <<: *x-logging
     container_name: appwrite-worker-builds
@@ -346,7 +350,7 @@ services:
       - _APP_LOGGING_CONFIG
 
   appwrite-worker-certificates:
-    image: appwrite/appwrite:1.0.3
+    image: appwrite/appwrite:1.2.1
     entrypoint: worker-certificates
     <<: *x-logging
     container_name: appwrite-worker-certificates
@@ -378,7 +382,7 @@ services:
       - _APP_LOGGING_CONFIG
 
   appwrite-worker-functions:
-    image: appwrite/appwrite:1.0.3
+    image: appwrite/appwrite:1.2.1
     entrypoint: worker-functions
     <<: *x-logging
     container_name: appwrite-worker-functions
@@ -409,7 +413,7 @@ services:
       - DOCKERHUB_PULL_PASSWORD
 
   appwrite-executor:
-    image: appwrite/appwrite:1.0.3
+    image: appwrite/appwrite:1.2.1
     entrypoint: executor
     <<: *x-logging
     container_name: appwrite-executor
@@ -467,7 +471,7 @@ services:
       - DOCKERHUB_PULL_PASSWORD
 
   appwrite-worker-mails:
-    image: appwrite/appwrite:1.0.3
+    image: appwrite/appwrite:1.2.1
     entrypoint: worker-mails
     <<: *x-logging
     container_name: appwrite-worker-mails
@@ -494,10 +498,11 @@ services:
       - _APP_LOGGING_CONFIG
 
   appwrite-worker-messaging:
-    image: appwrite/appwrite:1.0.3
+    image: appwrite/appwrite:1.2.1
     entrypoint: worker-messaging
     <<: *x-logging
     container_name: appwrite-worker-messaging
+    restart: unless-stopped
     networks:
       - appwrite
     depends_on:
@@ -514,7 +519,7 @@ services:
       - _APP_LOGGING_CONFIG
 
   appwrite-maintenance:
-    image: appwrite/appwrite:1.0.3
+    image: appwrite/appwrite:1.2.1
     entrypoint: maintenance
     <<: *x-logging
     container_name: appwrite-maintenance
@@ -542,13 +547,12 @@ services:
       - _APP_MAINTENANCE_RETENTION_CACHE
       - _APP_MAINTENANCE_RETENTION_ABUSE
       - _APP_MAINTENANCE_RETENTION_AUDIT
+      - _APP_MAINTENANCE_RETENTION_USAGE_HOURLY
 
-  appwrite-usage-timeseries:
-    image: appwrite/appwrite:1.0.3
-    entrypoint:
-      - usage
-      - --type=timeseries
-    container_name: appwrite-usage-timeseries
+  appwrite-usage:
+    image: appwrite/appwrite:1.2.1
+    entrypoint: usage
+    container_name: appwrite-usage
     <<: *x-logging
     restart: unless-stopped
     networks:
@@ -566,40 +570,7 @@ services:
       - _APP_DB_PASS
       - _APP_INFLUXDB_HOST
       - _APP_INFLUXDB_PORT
-      - _APP_USAGE_TIMESERIES_INTERVAL
-      - _APP_USAGE_DATABASE_INTERVAL
-      - _APP_REDIS_HOST
-      - _APP_REDIS_PORT
-      - _APP_REDIS_USER
-      - _APP_REDIS_PASS
-      - _APP_LOGGING_PROVIDER
-      - _APP_LOGGING_CONFIG
-
-  appwrite-usage-database:
-    image: appwrite/appwrite:1.0.3
-    entrypoint:
-      - usage
-      - --type=database
-    container_name: appwrite-usage-database
-    <<: *x-logging
-    restart: unless-stopped
-    networks:
-      - appwrite
-    depends_on:
-      - influxdb
-      - mariadb
-    environment:
-      - _APP_ENV
-      - _APP_OPENSSL_KEY_V1
-      - _APP_DB_HOST
-      - _APP_DB_PORT
-      - _APP_DB_SCHEMA
-      - _APP_DB_USER
-      - _APP_DB_PASS
-      - _APP_INFLUXDB_HOST
-      - _APP_INFLUXDB_PORT
-      - _APP_USAGE_TIMESERIES_INTERVAL
-      - _APP_USAGE_DATABASE_INTERVAL
+      - _APP_USAGE_AGGREGATION_INTERVAL
       - _APP_REDIS_HOST
       - _APP_REDIS_PORT
       - _APP_REDIS_USER
@@ -608,7 +579,7 @@ services:
       - _APP_LOGGING_CONFIG
 
   appwrite-schedule:
-    image: appwrite/appwrite:1.0.3
+    image: appwrite/appwrite:1.2.1
     entrypoint: schedule
     container_name: appwrite-schedule
     <<: *x-logging
