--- a/alist/docker-compose.yml
+++ b/alist/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.3'
 
 services:
   alist:
-    image: 'xhofe/alist:latest'
+    image: 'xhofe/alist:${VERSION}'
     restart: always
     volumes:
       - '${ALIST_CONFIG_PATH}:/opt/alist/data'
