--- a/nginx-proxy-manager/docker-compose.yml
+++ b/nginx-proxy-manager/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   nginx-proxy-manager:
-    image: 'jc21/nginx-proxy-manager:latest'
+    image: 'jc21/nginx-proxy-manager:${VERSION}'
     restart: always
     ports:
       # These ports are in format <host-port>:<container-port>
