--- a/owncast/docker-compose.yml
+++ b/owncast/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.3'
 
 services:
   owncast:
-    image: 'gabekangas/owncast:latest'
+    image: 'owncast/owncast:latest'
     restart: always
     volumes:
       - '${CONFIG_PATH}/data:/app/data'
