--- a/n8n/docker-compose.yml
+++ b/n8n/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3'
 services:
   n8n:
     container_name: n8n
@@ -6,6 +5,8 @@ services:
     restart: always
     volumes:
       - n8n-volumes:/home/node/.n8n
+    ports:
+      - 5678:5678
     environment:
       - TZ=Asia/Shanghai
       - N8N_BASIC_AUTH_ACTIVE=true
@@ -15,19 +16,18 @@ services:
       - DB_POSTGRESDB_DATABASE=n8n
       - DB_POSTGRESDB_HOST=db
       - DB_POSTGRESDB_PORT=5432
-      - DB_POSTGRESDB_USER=${POSTGRESDB_USER}
-      - DB_POSTGRESDB_SCHEMA=public
-      - DB_POSTGRESDB_PASSWORD=${POSTGRESDB_PASSWORD}
+      - DB_POSTGRESDB_USER=${DB_USER}
+      - DB_POSTGRESDB_PASSWORD=${DB_PASSWORD}
       - WEBHOOK_TUNNEL_URL=${WEBHOOK_TUNNEL_URL}
-      - VIRTUAL_HOST=${YOUR_DOMAIN}
-      - VIRTUAL_PORT=5678
-      - LETSENCRYPT_HOST=${YOUR_DOMAIN}
-      - LETSENCRYPT_EMAIL=${YOUR_EMAIL}
+  db:
+    image: postgres:12
+    restart: always
+    volumes:
+      - db-data:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_USER=${DB_USER}
+      - POSTGRES_PASSWORD=${DB_PASSWORD}
+      - POSTGRES_DB=n8n
 volumes:
   n8n-volumes:
-
-networks:
-  default:
-    external:
-      name: nginx-proxy
-
+  db-data:
