--- a/dify/docker-compose.yaml
+++ b/dify/docker-compose.yaml
@@ -213,7 +213,7 @@ services:
       # The milvus username.
       MILVUS_USER: root
       # The milvus password.
-      MILVUS_PASSWORD: Milvus
+      MILVUS_PASSWORD: ${MILVUS_PASSWORD}
       # The milvus tls switch.
       MILVUS_SECURE: 'false'
       # Mail configuration, support: resend
