feat: update n8n config

--- a/n8n/docker-compose.yml
+++ b/n8n/docker-compose.yml
@@ -18,6 +18,9 @@ services:
       - DB_POSTGRESDB_PORT=5432
       - DB_POSTGRESDB_USER=${DB_USER}
       - DB_POSTGRESDB_PASSWORD=${DB_PASSWORD}
+      - N8N_RUNNERS_ENABLED=true
+      - N8N_EDITOR_BASE_URL=${N8N_EDITOR_BASE_URL}
+      - WEBHOOK_URL=${WEBHOOK_URL}
       - WEBHOOK_TUNNEL_URL=${WEBHOOK_TUNNEL_URL}
   db:
     image: postgres:12
