feat: update syncthing remove domain support

--- a/syncthing/docker-compose.yml
+++ b/syncthing/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3"
 services:
   syncthing:
     container_name: syncthing
@@ -7,21 +6,13 @@ services:
     volumes:
       - ${PATH_TO_SYNC}:/var/syncthing
     ports:
+      - 8384:8384
       - 22000:22000/tcp
       - 22000:22000/udp
       - 21027:21027/udp
-    restart: unless-stopped
+    restart: always
     environment:
-      - PUID=1000
-      - PGID=1000
+      - PUID=${PUID}
+      - PGID=${PGID}
       - TZ=Asia/Shanghai
-      - VIRTUAL_HOST=${YOUR_DOMAIN}
-      - VIRTUAL_PORT=8384
-      - LETSENCRYPT_HOST=${YOUR_DOMAIN}
-      - LETSENCRYPT_EMAIL=${YOUR_EMAIL}
-
-networks:
-  default:
-    external:
-      name: nginx-proxy
 
