feat: update fast note sync default path

--- a/fast-note-sync/.env.example
+++ b/fast-note-sync/.env.example
@@ -4,4 +4,4 @@
 # Base directory for Fast Note Sync data
 # 快速笔记同步数据的基础目录
 # Example: /home/user/fast-note-sync or /var/lib/fast-note-sync
-FAST_NOTE_SYNC=~/
+FAST_NOTE_SYNC=~/fast-note-sync/
